# SIMULARE-OOP

./: CMakeLists.txt  README.md  main.cpp
Controllers/: PenController.cpp  PenController.h
Models/: Pen.cpp  Pen.h
Repositories/: PenRepository.cpp  PenRepository.h
UI/: UI.cpp  UI.h
